<resources>
    <string name="app_name">LastfmClient</string>
    <string name="promt">Discover\nmore music</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="comeonin">COME ON IN</string>
    <string name="donthave">Don\'t have profile?</string>
    <string name="forgot">Forgot password</string>
    <string name="drawer_open">OPEN</string>
    <string name="drawer_close">CLOSE</string>
    <string name="plays_since">plays since</string>

    <string name="recommended_title">Recommended Music</string>
    <string name="more_button">MORE</string>
    <string name="action_settings">Settings</string>
    <string name="recently_listened">Recently Listened Tracks</string>
    <string name="label_library">\'s Library</string>

    <string name="label_artist_biography">Biography</string>
    <string name="label_artist_similar">Similar Artist</string>


</resources>
